• changed link color to a warmer orange from the Apache logo • noticed some spacing issues on the homepage

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,11 +9,11 @@
 }
 
 a {
-  color: #fa6028;
+  color: #d74633;
 }
 
 .dropdown-item.active, .dropdown-item:active {
-    background-color: #fa6028;
+    background-color: #d74633;
 }
 
 body {
